--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -242,7 +242,7 @@
                                             <div class="Item-module-image-CGday" th:style="'background-image: url(' + ${promoItem.imageUrl} + ');'"></div>
                                             <a class="Item-module-link-Lms-C"
                                                tabindex="-1"
-                                               th:with="formattedTitle=${promoItem.title.replace(' ', '-')}"
+                                               th:with="formattedTitle=${promoItem.title.replace(' ', '-')+'/sezon-1'}"
                                                th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
                                             </a>
                                             <div class="Item-module-curtain-EV2Ya">
@@ -373,146 +373,6 @@
             </div>
 
             <footer id="page-footer" class="Footer-module-footer-rUC1K">
-                <div class="Footer-module-upper-BE4ds">
-                    <section class="Footer-module-upperscaffold-0uiqs" itemtype="">
-                        <div class="Scaffold-module-scaffold-F6aIC">
-                            <div class="Footer-module-logocolumn-2E6O5">
-                                <a class="Footer-module-logo-l7-f-" data-href="" data-testhook="footer-viaplay-logo"
-                                   href="/"
-                                   tabindex="-1">
-                                    <span>Viaplay</span>
-                                </a>
-                            </div>
-                            <div class="Footer-module-tablecontainer-8X-RH">
-                                <div class="Footer-module-table-MvQSs">
-                                    <div class="Footer-module-column-9P75e">
-                                        <div>
-                                            <h3 class="FooterColumn-module-header-X99Fv" tabindex="-1">VIAPLAY</h3>
-                                            <ul class="FooterColumn-module-list-EJzCV">
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/series">
-                                                        <span>Seriale</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/movies">
-                                                        <span>Filmy</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/sport">
-                                                        <span>Sport</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/kids">
-                                                        <span>Dla dzieci</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/channels">
-                                                        <span>Kanały TV</span>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="Footer-module-column-9P75e">
-                                        <div>
-                                            <h3 class="FooterColumn-module-header-X99Fv" tabindex="-1">Informacje</h3>
-                                            <ul class="FooterColumn-module-list-EJzCV">
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://help.viaplay.com/pl">
-                                                        <span>Obsługa klienta</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/devices">
-                                                        <span>Nasze platformy</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/terms">
-                                                        <span>Regulamin serwisu Viaplay</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/privacy">
-                                                        <span>Polityka prywatności</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS" href="/cookies">
-                                                        <span>Pliki cookie</span>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="Footer-module-column-9P75e">
-                                        <div>
-                                            <h3 class="FooterColumn-module-header-X99Fv" tabindex="-1">O nas</h3>
-                                            <ul class="FooterColumn-module-list-EJzCV">
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://www.viaplaygroup.com/news">
-                                                        <span>Prasa i newsy</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://careers.viaplaygroup.com/">
-                                                        <span>Oferty pracy</span>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="Footer-module-column-9P75e">
-                                        <div>
-                                            <h3 class="FooterColumn-module-header-X99Fv" tabindex="-1">Śledź nas</h3>
-                                            <ul class="FooterColumn-module-list-EJzCV">
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://www.facebook.com/viaplay/">
-                                                        <span>Facebook</span></a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://www.linkedin.com/company/viaplay">
-                                                        <span>LinkedIn</span>
-                                                    </a>
-                                                </li>
-                                                <li class="FooterColumnLink-module-item-VsqhI"
-                                                    data-testhook="footer-section">
-                                                    <a class="FooterColumnLink-module-link-F0qFS"
-                                                       href="https://www.instagram.com/viaplay/">
-                                                        <span>Instagram</span>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
                 <div class="Footer-module-lower-ieG8u">
                     <section itemtype="">
                         <div class="Scaffold-module-scaffold-F6aIC">
