--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -1,10 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ViaPlay</title>
+    <link rel="stylesheet" href="/styles/main.css" th:href="@{/styles/main.css}" type="text/css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+
 </head>
 <body>
+
+<div id="content-wrapper" class>
+    <div class="dockable"></div>
+    <div id="react-mount">
+        <div class="Layout-module-internal-page--krBv">
+            <header class="Navigation-module-container-2t2XT">
+                <div class="Navigation-module-wrapper-VDNDW">
+                    <div class="Navigation-module-sections-tzP7z">
+                        <div class="Navigation-module-left-FaRmB">
+                    <span>
+                        <div class="HeaderLogo-module-headerLogo-lWX4m">
+                            <a class="HeaderLogo-module-link-kdP1e" href="/">
+                                <img src="https://viaplay-web-frontend-assets.mtg-api.com/frontend-2023092141850/images/header-logo.png"
+                                     alt="Viaplay Start logo"
+                                     class="Logo-module-logo-pfYdr">
+                            </a>
+                        </div>
+                    </span>
+                        </div>
+                        <nav class="NavigationItems-module-center-cd-0t">
+                            <a class="NavigationItem-module-item-vXU--" href="/series">Seriale</a>
+                            <a class="NavigationItem-module-item-vXU--" href="/movies">Filmy</a>
+                            <a class="NavigationItem-module-item-vXU--" href="/sport">Sport</a>
+                            <a class="NavigationItem-module-item-vXU--" href="/kids">Dla dzieci</a>
+                            <!--                            <a class="NavigationItem-module-item-vXU&#45;&#45;" href="/channels">Kanały TV</a>-->
+                        </nav>
+                        <div class="Navigation-module-right-643YK">
+                            <div class="SearchButton-module-container-oHmID">
+                                <a class="SearchButton-module-icon-zn1mS" href="/#search="></a>
+                            </div>
+                            <a class="NavigationItem-module-item-vXU-- NavigationItem-module-library-E3ML5 NavigationItem-module-hide-n07a1"
+                               href="/library"></a>
+                            <div class="UserMenu-module-detailsAuthenticated-Ku3RE">
+                                <button class="UserMenu-module-toggle-mkB6K">
+                                    <div class="UserMenu-module-buttonbox-HF7RL">
+                                        <div class="ProfileAvatar-module-container-aV27r ProfileAvatar-module-small-HCZsN"
+                                             tabindex="-1">
+                                            <div class="ProfileAvatar-module-editContainer-mwkk5">
+                                                <img class="ProfileAvatar-module-avatar-2Qy4H" alt="avatar"
+                                                     src="https://i-viaplay-com.akamaized.net/viaplay-static-prod/profiles/avatars/adults/boombox.png?width=500&amp;height=500">
+                                                <div class="ProfileAvatar-module-editIcon-zlhbG"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </button>
+                            </div>
+                            <button class="Navigation-module-toggleNavigation-uQPGv" id="toggle-navigation"></button>
+                            <nav class="NavigationItems-module-navigation-AW08m NavigationItems-module-hide-bZgrX">
+                                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
+                                   href="/series">Seriale</a>
+                                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
+                                   href="/movies">Filmy</a>
+                                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
+                                   href="/sport">Sport</a>
+                                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
+                                   href="/kids">Dla dzieci</a>
+                                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
+                                   href="/channels">Kanały TV</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="dockable"></div>
+            <div class="blocksEnsembleContainer-module-container-ZXS1I">
+                <div id="content" class="article" data-testhook="article">
+                    <div class="dockable"></div>
+                    <div class="Season-module-wrapper-H0oVh" data-testhook="season">
+                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-top-peA7i" style="top: 0px;"></div>
+                        <div class="StickyDiv-module-container-Tiqyz SeasonsNavigation-module-season-FeQtK">
+                            <section data-testhook="season-navigation">
+                                <div class="Scaffold-module-scaffold-F6aIC">
+                                    <div id="genrePicker" class="SeasonsNavigation-module-wrapper-dfFTz">
+                                        <div class="SeasonsNavigation-module-container-PonSS">
+                                            <button class="SeasonsNavigation-module-button-vAD9n"
+                                                    data-testhook="genre-button" tabindex="0"
+                                                    style="text-decoration: none;">
+                                                <span>Gatunek</span>
+                                            </button>
+                                            <div class="SeasonsNavigation-module-dropdownWrapper-kC57-">
+                                                <ul th:each="genre : ${genres}"
+                                                    class="SeasonsNavigation-module-dropdown-Q3ieP"
+                                                    style="max-height: 480.438px;">
+                                                    <li class="SeasonButton-module-season-fRUUl"
+                                                        data-testhook="season-navigation-link" tabindex="0">
+                                                        <a th:href="@{'/movies/' + ${genre.genreType.toLowerCase()}}">
+                                                            <span class="SeasonButton-module-link-NG1PO"
+                                                                  th:text="${genre.genreType}">Gatunek filmu</span>
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-bot--lgll"
+                             style="transform: translateY(-64px);"></div>
+                    </div>
+
+                    <div th:replace="~{fragments :: series-carousel(genreTitle=${thrillerMoviesTitle}, genre=${thrillerGenre}, series=${thrillerMovies})}"></div>
+                </div>
+                <footer id="page-footer" class="Footer-module-footer-rUC1K">
+                    <div class="Footer-module-lower-ieG8u">
+                        <section itemtype="">
+                            <div class="Scaffold-module-scaffold-F6aIC">
+                                <span class="Footer-module-copyright-myMzS">© 2023 Viaplay Group Sweden AB (org.no: 556304-7041). All rights reserved.</span>
+                            </div>
+                        </section>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript" src="/scripts/common.js"></script>
 
 </body>
 </html>
